--- a/trunk/res/menu/stopbookmarks_menu.xml
+++ b/trunk/res/menu/stopbookmarks_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/stopbookmarks_menu_bustimes" android:title="Enter stopcode"></item>
+	<item android:id="@+id/stopbookmarks_menu_bustimes" android:title="Enter/Scan stopcode"></item>
 
 	<item android:title="Backup / Restore" android:id="@+id/stopbookmarks_menu_backuprestore">
 		<menu>
